# pulpcalc-rs

./: .gitignore  Cargo.toml  Personas.toml  Pulpcalc.env.example.toml  Pulpcalc.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  error.rs  errors.rs  lib.rs  llm_config.rs  simulation.rs
common/src/models/: attributes.rs  blog.rs  debate.rs  engagements.rs  mod.rs  reference.rs  response.rs  user.rs  vote.rs
common/src/models/gpt_scoring/: mod.rs
config/: Cargo.toml
config/src/: lib.rs
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  errors.rs
crates/common/src/models/: attributes.rs  debate.rs  response.rs  user.rs  vote.rs
crates/common/src/models/gpt_scoring/: mod.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs
crates/simulator/src/business/: prompts.rs
crates/simulator/src/enneagram/: chat_responses.rs  mod.rs  prompts.rs
crates/simulator/src/personas/: mod.rs
crates/simulator/src/personas/models/: learned.rs  personas_user.rs
crates/simulator/src/personas/prompts/: learned.rs  mod.rs  response.rs  sentiment.rs  vote.rs
docs/: CONFIG.md
simulator/: Cargo.toml
simulator/src/: debate.rs  lib.rs  util.rs
simulator/src/business/: mod.rs  prompts.rs
simulator/src/business_analytics/: mod.rs
simulator/src/enneagram/: enneagram_prompts.rs  mod.rs
simulator/src/personas/: mod.rs
simulator/src/personas/models/: learned.rs  mod.rs  personas_user.rs
simulator/src/personas/prompts/: learned.rs  mod.rs  response.rs  vote.rs
