[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
config = { path = "./../config" }
futures = "0.3.27"
pulpcalc_common = { path = "./../common" }
tokio = { version = "1.26.0", features = ["full"] }
