[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
pulpcalc_common = { path = "./../common" }
simulator = { path = "./../simulator" }
pulpcalc_external = { path = "./../external" }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = { version = "1.0.89", default-features = false }
serde = "1.0.156"
futures = "0.3.27"
rand = "0.8.5"
