[package]
name = "pulpcalc_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.5.9"
rand = "0.8.5"
serde = "1.0.156"
pulpcalc_external = { path = "./../external" }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.94"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
