[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulpcalc_common = { path = "./../common" }
pulpcalc_external = { path = "./../external" }
anyhow = "1.0"
serde = {version="1.0.155", features=["derive"]}
rand = "0.8.5"
toml = "0.7.3"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.94"
