[package]
name = "pulpcalc_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git"}
rand = "0.8.5"
serde = "1.0.156"
pulpcalc_external = { path = "./../external" }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
