[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { version = "0.6", default-features = false }
pulpcalc_common = { path = "./../common" }
pulpcalc_external = { path = "./../external" }
neo4rs = { git = "https://github.com/neo4j-labs/neo4rs.git"}
anyhow = "1.0"
serde = {version="1.0.155", features=["derive"]}
rand = "0.8.5"
toml = "0.7.3"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1.0.94"
regex = "1.7.1"
futures = "0.3.27"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]